prd_package/objects/Nationality_Master__mdt.object
<CustomObject>
    <fields>
        <fullName>Continent__c</fullName>
        <label>Continent</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nationality_Full_Name__c</fullName>
        <label>Nationality Full Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Primary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sub_Region__c</fullName>
        <label>Sub Region</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Nationality Master</label>
    <pluralLabel>Nationality Masters</pluralLabel>
</CustomObject>